--- a/app/src/main/res/layout/fragment_employee__m__chatbot.xml
+++ b/app/src/main/res/layout/fragment_employee__m__chatbot.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.quickconnect_employee_cc.Employee_CC_Settings_Profile_Fragment">
+    tools:context="com.example.Employee_M.Employee_M_Chatbot">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
