--- a/app/src/main/res/menu/nav_employee_m_menu.xml
+++ b/app/src/main/res/menu/nav_employee_m_menu.xml
@@ -5,20 +5,20 @@
     tools:showIn="navigation_view">
 
 
-    <group android:checkableBehavior="single">
+    <group android:checkableBehavior="single"
+        android:textColor="@color/contentTextColor"
+        >
         <item
             android:id="@+id/nav_e_m_home"
             android:icon="@drawable/nav_home"
-            android:title="@string/Home"/>
+            android:title="@string/Home"
+            />
 
         <item
             android:id="@+id/nav_e_m_requests"
             android:icon="@drawable/nav_about"
             android:title="@string/Request"/>
-        <item
-            android:id="@+id/nav_e_m_chatbot"
-            android:icon="@drawable/nav_message"
-            android:title="@string/profile" />
+
         <item
             android:id="@+id/nav_e_m_language"
             android:icon="@drawable/nav_language"
@@ -30,7 +30,9 @@
     </group>
 
     <item
-        android:title="">
+        android:title=""
+        android:textColor="@color/contentTextColor"
+        >
 
         <menu>
             <item
