--- a/app/src/main/res/layout/activity_employee_mmain.xml
+++ b/app/src/main/res/layout/activity_employee_mmain.xml
@@ -38,8 +38,9 @@
         android:layout_gravity="start"
         app:headerLayout="@layout/nav_employee_m_header"
         app:menu="@menu/nav_employee_m_menu"
-        app:itemIconTint="@color/black"
-        app:itemTextColor="@color/black"/>
+        app:itemIconTint="@color/contentTextColor"
+        app:itemTextColor="@color/menu_text_color"
+        android:background="@color/menu_background_color"/>
 
 </androidx.drawerlayout.widget.DrawerLayout>
 
