--- a/app/src/main/res/layout/fragment_customer__home.xml
+++ b/app/src/main/res/layout/fragment_customer__home.xml
@@ -36,18 +36,9 @@
                 android:layout_height="wrap_content"
                 android:text="Name"
                 android:id="@+id/name"
-                android:textColor="@color/purple_700"
+                android:textColor="@color/hello_name_text"
                 android:textSize="35sp"
                 android:textStyle="bold" />
-
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginLeft="10dp"
-                android:contentDescription="Wave PNG"
-                android:src="@drawable/wave">
-
-            </ImageView>
 
         </LinearLayout>
 
@@ -356,7 +347,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:padding="8dp"
-                            android:src="@drawable/nav_profile">
+                            android:src="@drawable/nav_profile_white">
 
                         </ImageView>
 
