--- a/app/src/main/res/layout/fragment_language__change.xml
+++ b/app/src/main/res/layout/fragment_language__change.xml
@@ -7,29 +7,58 @@
     android:background="@color/contentBodyColor"
     tools:context="com.example.customer.Language_Change">
 
-    <Spinner
-        android:id="@+id/language_spinner"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints"
-        android:textColor="@color/contentTextColor"/>
-
-    <TextView
-        android:id="@+id/textView17"
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/textViewLanguagePreferences"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello"
-        app:layout_constraintBottom_toTopOf="@+id/language_spinner"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:text="Language Preferences"
+        android:textSize="28sp"
+        android:textColor="@color/contentTextColor"
+        android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent"
-        android:textColor="@color/contentTextColor"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="32dp"/>
+
+
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/languageSpinnerContainer"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/textViewLanguagePreferences"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <AutoCompleteTextView
+            android:id="@+id/language_spinner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="none"
+            android:textColor="@color/contentTextColor"
+            android:padding="16dp"
+            android:background="@null" />
+
+    </com.google.android.material.textfield.TextInputLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
