--- a/app/src/main/res/menu/nav_customer_menu.xml
+++ b/app/src/main/res/menu/nav_customer_menu.xml
@@ -3,15 +3,24 @@
     android:theme="@style/Base.Theme.QuickConnect"
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view"
+
     >
 
     <group android:checkableBehavior="single"
+        android:textColor="@color/contentTextColor"
         >
         <item
             android:id="@+id/nav_c_home"
             android:icon="@drawable/nav_home"
             android:title="@string/Home"
 
+
+            />
+
+        <item
+            android:id="@+id/nav_c_quickconnect"
+            android:icon="@drawable/quick_connect"
+            android:title="@string/quickconnect"
             />
         <item
             android:id="@+id/nav_c_Voice_Video_Call"
@@ -27,18 +36,10 @@
         <item
             android:id="@+id/nav_c_chatbot"
             android:icon="@drawable/baseline_voice_chat_24"
-            android:title="Chatbot" />
+            android:title="@string/chatbot" />
 
 
-        <item
-            android:id="@+id/nav_c_quickconnect"
-            android:icon="@drawable/quick_connect"
-            android:title="@string/quickconnect"
-            />
-        <item
-            android:id="@+id/nav_c_profile"
-            android:icon="@drawable/nav_profile"
-            android:title="@string/profile" />
+
 
 
 
@@ -47,17 +48,15 @@
     </group>
 
     <item
-        android:title="">
+        android:title=""
+        android:textColor="@color/contentTextColor">
 
         <menu>
+
             <item
-                android:id="@+id/nav_c_language"
-                android:icon="@drawable/nav_language"
-                android:title="@string/change_language" />
-            <item
-                android:id="@+id/nav_c_settings"
+                android:id="@+id/nav_c_profile_settings"
                 android:icon="@drawable/nav_setting"
-                android:title="@string/settings" />
+                android:title="@string/profile_and_settings__" />
             <item
                 android:id="@+id/nav_c_logout"
                 android:icon="@drawable/nav_logout"
