--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,16 +3,13 @@
     <style name="Base.Theme.QuickConnect" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
        <item name="colorPrimary">#FF390F</item>
-        <item name="colorPrimaryVariant">@color/red</item>
         <item name="colorOnPrimary">#FFFFFF</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimaryVariant">@color/colorPrimaryVariant</item>
         <item name="iconTint">#FFFFFF</item>
 
 
     </style>
-
-
-
-
 
 
     <!--styles for education app-->
