--- a/app/src/main/res/layout/fragment_customer_messaging_call.xml
+++ b/app/src/main/res/layout/fragment_customer_messaging_call.xml
@@ -11,6 +11,8 @@
         android:id="@+id/horizontalScrollView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fadeScrollbars="true"
+        android:scrollbarSize="2dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -19,28 +21,19 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="horizontal"
-            android:padding="10dp">
+            android:padding="10dp"
+            android:scrollbarThumbHorizontal="@drawable/call_request_vc_vc_not_selected">
 
-
-            <Button
-                android:id="@+id/button6"
-                style="@style/Widget.Material3.Button.OutlinedButton"
-                android:layout_width="60dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:paddingLeft="0dp"
-                android:paddingRight="0dp"
-                android:text="All" />
 
             <com.google.android.material.button.MaterialButtonToggleGroup
-                android:id="@+id/toggleButton"
+                android:id="@+id/filter_chats_requests_grp"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="8dp"
+                android:layout_marginRight="5dp"
                 android:layout_weight="1">
 
                 <Button
-                    android:id="@+id/button2"
+                    android:id="@+id/filter_chats"
                     style="?attr/materialButtonOutlinedStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -50,7 +43,7 @@
                     android:text="Messaging" />
 
                 <Button
-                    android:id="@+id/button3"
+                    android:id="@+id/filter_requests"
                     style="?attr/materialButtonOutlinedStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -62,14 +55,14 @@
             </com.google.android.material.button.MaterialButtonToggleGroup>
 
             <com.google.android.material.button.MaterialButtonToggleGroup
-                android:id="@+id/toggleButton2"
+                android:id="@+id/filter_situation_grp"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="8dp"
+                android:layout_marginLeft="0dp"
                 android:layout_weight="1">
 
                 <Button
-                    android:id="@+id/button4"
+                    android:id="@+id/filter_unresolved"
                     style="?attr/materialButtonOutlinedStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -78,7 +71,7 @@
                     android:text="Unresolved" />
 
                 <Button
-                    android:id="@+id/button5"
+                    android:id="@+id/filter_resolved"
                     style="?attr/materialButtonOutlinedStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
