--- a/app/src/main/res/layout/activity_chatbot.xml
+++ b/app/src/main/res/layout/activity_chatbot.xml
@@ -57,67 +57,71 @@ android:layout_height="match_parent">
         app:layout_constraintTop_toBottomOf="@+id/recycler_gchat" />
 
     <RelativeLayout
-    android:id="@+id/layout_qcbot_chatbox"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/view">
+        android:id="@+id/layout_qcbot_chatbox"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view">
 
         <EditText
             android:id="@+id/chatbot_message"
+            style="@android:style/Widget.DeviceDefault.Light.AutoCompleteTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="10dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="0dp"
             android:layout_toStartOf="@+id/chatbot_send"
             android:background="@drawable/chat_outline"
+            android:breakStrategy="simple"
             android:fontFamily="sans-serif"
             android:foreground="@drawable/chat_outline"
             android:hint="@string/enter_message"
-            android:imeOptions="actionDone|actionSend"
-            android:inputType="text|textAutoComplete"
-            android:maxLines="6"
+            android:imeOptions="actionDone|actionNext|actionSend"
+            android:inputType="text|textImeMultiLine|textMultiLine"
             android:minHeight="48dp"
             android:paddingStart="12dp"
             android:paddingTop="12dp"
-            android:paddingEnd="40dp"
+            android:paddingEnd="80dp"
             android:paddingBottom="12dp"
             android:singleLine="false"
             android:textColorHint="#8D6E63"
             tools:ignore="Autofill" />
 
 
-    <ImageButton
-        android:id="@+id/chatbot_send"
-        style="@android:style/Widget.Material.Light.ImageButton"
-        android:layout_width="70dp"
-        android:layout_height="48dp"
-        android:layout_alignParentEnd="true"
-        android:background="@android:drawable/list_selector_background"
-        android:contentDescription="@string/send"
-        android:padding="6dp"
-        android:scaleType="fitCenter"
-        android:src="@drawable/baseline_send_24"
-        tools:src="@drawable/baseline_send_24"
-        app:tint="@color/red" />
+        <ImageButton
+            android:id="@+id/chatbot_send"
+            style="@android:style/Widget.Material.Light.ImageButton"
+            android:layout_width="70dp"
+            android:layout_height="48dp"
+            android:layout_alignParentEnd="true"
+            android:background="@android:drawable/list_selector_background"
+            android:contentDescription="@string/send"
+            android:padding="6dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/baseline_send_24"
+            app:tint="@color/red"
+            tools:src="@drawable/baseline_send_24" />
 
-    <ImageButton
-        android:id="@+id/chatbot_mic"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_alignEnd="@+id/chatbot_message"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="0dp"
-        android:layout_marginEnd="8dp"
-        android:background="@color/transparent"
-        android:padding="10dp"
-        android:scaleType="fitCenter"
-        app:srcCompat="@drawable/zego_uikit_icon_mic_state"
-        app:tint="#F44336"
-        tools:ignore="SpeakableTextPresentCheck" />
+        <ImageButton
+            android:id="@+id/chatbot_mic"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_alignEnd="@+id/chatbot_message"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="8dp"
+            android:background="@color/transparent"
+            android:padding="10dp"
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/zego_uikit_icon_mic_state"
+            app:tint="#F44336"
+            tools:ignore="SpeakableTextPresentCheck" />
 
-</RelativeLayout>
+    </RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
