--- a/app/src/main/res/layout/chat_item_layout.xml
+++ b/app/src/main/res/layout/chat_item_layout.xml
@@ -12,7 +12,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="10dp"
         android:outlineProvider="background"
         app:cardBackgroundColor="@color/material_dynamic_neutral_variant90"
         app:cardCornerRadius="8dp"
@@ -34,6 +34,7 @@
                 android:fontFamily="@font/poppins_semibold"
                 android:text="Anthony Tan - Scam Prevention Unit"
                 android:textColor="#091E28"
+                android:textSize="14sp"
                 app:layout_constraintStart_toEndOf="@+id/chat_item_icon"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -45,7 +46,7 @@
                 android:text="Category: Scam"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
                 android:textColor="#091E28"
-                android:textSize="12sp"
+                android:textSize="11sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@+id/chat_item_title"
                 app:layout_constraintTop_toBottomOf="@+id/chat_item_title" />
@@ -56,7 +57,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 android:layout_marginEnd="16dp"
-                android:layout_marginBottom="16dp"
+                android:layout_marginBottom="8dp"
                 android:ems="20"
                 android:fontFamily="sans-serif-thin"
                 android:lines="1"
@@ -74,15 +75,14 @@
                 android:id="@+id/chat_item_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
                 android:backgroundTint="@color/white"
                 android:gravity="center"
                 android:text="Thu 12:59"
                 android:textColor="#091E28"
+                android:textSize="12sp"
                 android:visibility="visible"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintEnd_toEndOf="@+id/chat_item_lastmsg"
+                app:layout_constraintTop_toTopOf="@+id/chat_item_title" />
 
             <ImageView
                 android:id="@+id/chat_item_icon"
