--- a/app/src/main/res/layout/fragment_employee__m__requests_.xml
+++ b/app/src/main/res/layout/fragment_employee__m__requests_.xml
@@ -6,14 +6,45 @@
     android:layout_height="match_parent"
     tools:context="com.example.Employee_M.Employee_M_Requests_Fragment" >
 
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Message Specialist"
+        android:orientation="horizontal"
+        android:padding="10dp"
+        android:scrollbarThumbHorizontal="@drawable/call_request_vc_vc_not_selected"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+
+        <com.google.android.material.button.MaterialButtonToggleGroup
+            android:id="@+id/m_filter_situation_grp"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginRight="5dp"
+            android:layout_weight="1"
+            android:gravity="center_horizontal">
+
+            <Button
+                android:id="@+id/m_filter_unresolved"
+                style="?attr/materialButtonOutlinedStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:text="Unresolved" />
+
+            <Button
+                android:id="@+id/m_filter_resolved"
+                style="?attr/materialButtonOutlinedStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:text="Resolved" />
+
+        </com.google.android.material.button.MaterialButtonToggleGroup>
+
+    </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/msupport_home_rv"
@@ -23,6 +54,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight="match_constraint"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
