--- a/app/src/main/res/layout/message_item_me.xml
+++ b/app/src/main/res/layout/message_item_me.xml
@@ -53,6 +53,18 @@
                 app:srcCompat="@drawable/headerbkg"
                 tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
+            <com.airbnb.lottie.LottieAnimationView
+                android:id="@+id/me_loadingMsg"
+                android:layout_width="60dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:scaleType="fitCenter"
+                android:visibility="gone"
+                app:lottie_autoPlay="true"
+                app:lottie_loop="true"
+                app:lottie_rawRes="@raw/dots_loading_anim" />
+
+
             <Button
                 android:id="@+id/message_me_file"
                 style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
@@ -80,7 +92,8 @@
                 android:paddingRight="12dp"
                 android:text="This is a Message"
                 android:textColor="#ffffff"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                android:visibility="visible" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
