--- a/app/src/main/res/layout/message_item_other.xml
+++ b/app/src/main/res/layout/message_item_other.xml
@@ -68,6 +68,17 @@
                 android:visibility="gone"
                 app:icon="@drawable/baseline_cloud_download_24" />
 
+            <com.airbnb.lottie.LottieAnimationView
+                android:id="@+id/other_loadingMsg"
+                android:layout_width="60dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:scaleType="fitCenter"
+                android:visibility="gone"
+                app:lottie_autoPlay="true"
+                app:lottie_loop="true"
+                app:lottie_rawRes="@raw/dots_loading_anim" />
+
             <TextView
                 android:id="@+id/message_them_text"
                 android:layout_width="wrap_content"
