--- a/app/src/main/res/layout/fragment_customer_messaging_call.xml
+++ b/app/src/main/res/layout/fragment_customer_messaging_call.xml
@@ -30,7 +30,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginRight="5dp"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                app:singleSelection="true">
 
                 <Button
                     android:id="@+id/filter_chats"
@@ -59,7 +60,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="0dp"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                app:singleSelection="true">
 
                 <Button
                     android:id="@+id/filter_unresolved"
