--- a/app/src/main/res/layout/fragment_employee__home_.xml
+++ b/app/src/main/res/layout/fragment_employee__home_.xml
@@ -71,7 +71,7 @@
                     android:layout_marginLeft="8dp"
                     android:paddingLeft="20dp"
                     android:paddingRight="20dp"
-                    android:text="Messaging" />
+                    android:text="Accepted" />
 
                 <Button
                     android:id="@+id/filter_unaccepted"
@@ -81,7 +81,7 @@
                     android:layout_marginLeft="8dp"
                     android:paddingLeft="20dp"
                     android:paddingRight="20dp"
-                    android:text="Call Requests" />
+                    android:text="Unaccepted" />
 
             </com.google.android.material.button.MaterialButtonToggleGroup>
 
