--- a/app/src/main/res/layout/fragment_customer__call__request.xml
+++ b/app/src/main/res/layout/fragment_customer__call__request.xml
@@ -51,7 +51,7 @@
         <ImageButton
             android:id="@+id/voiceCallButton"
             android:layout_width="10dp"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_weight="1"
             android:background="@drawable/video_call_selector"
             android:contentDescription="@string/voice_call"
@@ -66,7 +66,7 @@
         <ImageButton
             android:id="@+id/videoCallButton"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_weight="1"
             android:background="@drawable/video_call_selector"
             android:contentDescription="@string/video_call"
