--- a/app/src/main/res/layout/fragment_customer__profile_setting_.xml
+++ b/app/src/main/res/layout/fragment_customer__profile_setting_.xml
@@ -20,7 +20,9 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:id="@+id/profileRelativeLayout"
+            >
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/profileCircleImageView"
